gdnative/tests/ui/derive_fail_methods_missing_new.rs
use gdnative::prelude::*;

#[derive(NativeClass)]
#[inherit(Node)]
struct Foo {}

#[methods]
impl Foo {}

fn main() {}
